added raw docs
